--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>To-Do list</h1>
         <form action="" class="form">
             <input type="text">
-            <button>Create</button>
+            <button class="enter">Create</button>
         </form>
         <div class="collection"></div>
         <button onclick="refresh()" class="btn">Refresh</button>
