--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
             <button class="enter">Create</button>
         </form>
         <div class="collection"></div>
-        <button onclick="refresh()" class="btn">Refresh</button>
+        <button class="clear-btn">Clear All</button>
     </div>
     
 
     <script src="app.js"></script>
 </body>
 </html>
+
+
